# omdb-fastapi

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
emulators/: pubsub.py
migrations/: env.py
migrations/versions/: 6e680e6eb585_.py
scripts/: start_api  start_api_dev  start_worker  start_worker_dev
src/: app_api.py  app_worker.py  base_app.py  deps.py  populate_db.py  settings.py
src/api/app/: routes.py
src/api/worker/: routes.py
src/core/: constants.py  database.py  exceptions.py  model.py  pagination.py  schema.py  security.py
src/models/: movie.py  movie_import.py  user.py
src/repositories/: movie_import_repository.py  movie_repository.py  user_repository.py
src/schemas/: auth_schema.py  movie_import_schema.py  movie_schema.py  pubsub_schema.py  user_schema.py
src/services/: auth_service.py  movie_fetch_service.py  movie_import_service.py  movie_service.py  omdb_service.py  queue_service.py  user_service.py
src/utils/: logging.py
terraform/: .terraform.lock.hcl  artifact_registry.tf  database.tf  main.tf  output.tf  pubsub.tf  run.tf  service_account.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  factories.py  fixtures.py
tests/integration/: test_health.py  test_movie.py  test_movie_import.py  test_user_auth.py
tests/units/repositories/: test_movie_import_repository.py  test_movie_repository.py  test_user_repository.py
tests/units/services/: test_auth_service.py  test_movie_fetch_service.py  test_movie_service.py  (+4 more)
(+5 files in other folders)
